deploy/fullstack-app-backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fullstack-backend-service
  namespace: fullstack-application
spec:
  selector:
    app: fullstack-backend
  type: ClusterIP
  ports:
    - name: http
      port: 3001
      targetPort: 3001
