deploy/fullstack-app-backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fullstack-backend-ingress
  namespace: fullstack-application
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
  - host: localhost.backend    
    http:
      paths:
      - path: /api             
        pathType: Prefix
        backend:
          service:
            name: fullstack-backend-service
            port:
              number: 3001
